# x07-registry

./: .dockerignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  rust-toolchain.toml
.github/workflows/: approval.yml  ci.yml
docs/: auth.md
migrations/: 0001_init.sql  0002_github_oauth.sql  0003_pkg_advisories.sql  0004_scale_metadata.sql  0005_pkg_signatures.sql
openapi/: openapi.json
scripts/ci/: check_local.sh  check_registry_index_cache_headers.sh  check_registry_index_smoke.sh
src/: lib.rs  main.rs
tests/: http.rs  oauth.rs  s3_backend.rs
tests/support/: mod.rs
