[package]
name = "x07-registry"
version = "0.1.0"
description = "X07 package registry server (API)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/x07lang/x07-registry"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
