[package]
name = "x07-registry"
version = "0.1.0"
description = "X07 package registry server (API)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/x07lang/x07-registry"
edition = "2021"

[dependencies]
axum = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", features = ["rustls"] }
aws-types = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tar = "0.4"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
x07-worlds = { git = "https://github.com/x07lang/x07", tag = "v0.0.70", package = "x07-worlds" }
x07c = { git = "https://github.com/x07lang/x07", tag = "v0.0.70", package = "x07c" }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
